--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>SELCAN GULEC's PORTFOLIO</title>
+		<title>Massively by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>SELCAN GULEC's PORTFOLIO</h1>
-						<p>Meticulous Planning Engineer experienced in P6 | JR. Data Scientist well-versed in SQL, Tableau, Python  <a href="https://www.linkedin.com/in/">@sgulec</p>
+						<h1>This is<br />
+						Massively</h1>
+						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
+						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -28,18 +30,21 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">SELCAN GULEC</a>
+						<a href="index.html" class="logo">Massively</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
-
+							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
-              <li><a href="https://www.linkedin.com/in/sgulec/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-              <li><a href="https://github.com/gulecsec" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -49,16 +54,16 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-
-									<h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
-									<p>After completing 10-week data science course in Le Wagon, now it is time to choose the final projects.
-                    The final project that my team choose to build a web assistant for Le wagon Mexico City.
-                    It was desinged to work as a chat bot which relevantly will answer school related questions.
-                  </p>
+									<span class="date">April 25, 2017</span>
+									<h2><a href="#">And this is a<br />
+									massive headline</a></h2>
+									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
+									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
+									amet nullam sed etiam veroeros.</p>
 								</header>
-								<a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image main"><img src="images/Diega.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button large">View Project</a></li>
+									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
@@ -66,42 +71,139 @@
 							<section class="posts">
 								<article>
 									<header>
-
-										<h2><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings">SiteHercules, Construction daily report app</a></h2>
+										<span class="date">April 24, 2017</span>
+										<h2><a href="#">Sed magna<br />
+										ipsum faucibus</a></h2>
 									</header>
-									<a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="image fit"><img src="images/SITEHERCULES-Welcome page.png" alt="" /></a>
-									<p>Designed to keep the daily track in construction industry easier for users and operator-friendly.</p>
+									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-
-										<h2><a href="https://public.tableau.com/views/AirBnbFullProject_16769297945480/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">AirBnb TABLEAU Project</a></h2>
+										<span class="date">April 22, 2017</span>
+										<h2><a href="#">Primis eget<br />
+										imperdiet lorem</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/AirBnbFullProject_16769297945480/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/AIRBNB TABLEAU PROJECT.png" alt="" /></a>
-									<p>This is my second Tableau project. Thanks to <a href="https://www.youtube.com/">@AlexTheAnalyst</p>
+									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/views/AirBnbFullProject_16769297945480/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View the project</a></li>
+										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-
-						<section class="split contact">
-							<section class="alt">
-								<h3>Location</h3>
-								<p>Mexico City, MX</p>
+								<article>
+									<header>
+										<span class="date">April 18, 2017</span>
+										<h2><a href="#">Ante mattis<br />
+										interdum dolor</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">April 14, 2017</span>
+										<h2><a href="#">Tempus sed<br />
+										nulla imperdiet</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">April 11, 2017</span>
+										<h2><a href="#">Odio magna<br />
+										sed consectetur</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">April 7, 2017</span>
+										<h2><a href="#">Augue lorem<br />
+										primis vestibulum</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
 							</section>
 
+						<!-- Footer -->
+							<footer>
+								<div class="pagination">
+									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="page active">1</a>
+									<a href="#" class="page">2</a>
+									<a href="#" class="page">3</a>
+									<span class="extra">&hellip;</span>
+									<a href="#" class="page">8</a>
+									<a href="#" class="page">9</a>
+									<a href="#" class="page">10</a>
+									<a href="#" class="next">Next</a>
+								</div>
+							</footer>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<section>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+						</section>
+						<section class="split contact">
+							<section class="alt">
+								<h3>Address</h3>
+								<p>1234 Somewhere Road #87257<br />
+								Nashville, TN 00000-0000</p>
+							</section>
+							<section>
+								<h3>Phone</h3>
+								<p><a href="#">(000) 000-0000</a></p>
+							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">selcangulec@proton.me</a></p>
+								<p><a href="#">info@untitled.tld</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/sgulec/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/gulecsec" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
