--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 								<header class="major">
 
 									<h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
-									<p>After completing 10-week data science course in Le Wagon, now it is time to choose the final projects.
-                    The final project that my team choose to build a web assistant for Le wagon Mexico City.
-                    It was desinged to work as a chat bot which relevantly will answer school related questions.
+									<p>After completing 10-week data science course, now it is time to choose the final projects.
+                    For our final project, we have decided to build a web assistant in the form of a chatbot.
+                    This chatbot will be designed to answer school-related questions in a relevant and accurate manner.
                   </p>
 								</header>
 								<a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image main"><img src="images/Diega.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button large">View Project</a></li>
+									<li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button large">View</a></li>
 								</ul>
 							</article>
 
@@ -70,33 +70,30 @@
 										<h2><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings">SiteHercules, Construction daily report app</a></h2>
 									</header>
 									<a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="image fit"><img src="images/SITEHERCULES-Welcome page.png" alt="" /></a>
-									<p>Designed to keep the daily track in construction industry easier for users and operator-friendly.</p>
+									<p>Our project simplifies daily tracking in construction and prioritizes user-friendliness for operators.
+                    It streamlines data input and access, enabling more accurate analysis of construction progress.</p>
 									<ul class="actions special">
-										<li><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="button">View the project</a></li>
+										<li><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="button">View</a></li>
 									</ul>
 								</article>
+
                 <article>
                   <span class="date">February 20, 2023</span>
 									<header>
-										<h2><a href="https://public.tableau.com/views/AirBnbFullProject_16769297945480/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">AirBnb TABLEAU Project</a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/selcan.gulec">My TABLEAU Projects</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/AirBnbFullProject_16769297945480/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/AIRBNB TABLEAU PROJECT.png" alt="" /></a>
-									<p>This is my second Tableau project. Thanks to <a href="https://www.youtube.com/">@AlexTheAnalyst</p>
+									<a href="https://public.tableau.com/app/profile/selcan.gulec" class="image fit"><img src="images/AIRBNB TABLEAU PROJECT.png" alt="" /></a>
+									<p>Building these Tableau projects was an enjoyable experience for me.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/views/AirBnbFullProject_16769297945480/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View the project</a></li>
+
+                    <li><a href="https://public.tableau.com/app/profile/selcan.gulec" class="button">View</a></li>
+                    <hr>
 									</ul>
 								</article>
+
                 </article>
-                <span class="date">February 20, 2023</span>
-                    <header>
-                      <h2><a href="https://public.tableau.com/views/HRANALYTUCSDASHBOARD/HRAnalyticsDashboard?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link">HR TABLEAU Project</a></h2>
-                    </header>
-                    <a href="https://public.tableau.com/views/HRANALYTUCSDASHBOARD/HRAnalyticsDashboard?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/HR Analytics Dashboard.png" alt="" /></a>
-                    <p>This is my first Tableau project. Thanks to <a href="https://www.youtube.com/">@datatutorials1</p>
-                    <ul class="actions special">
-                      <li><a href="https://public.tableau.com/views/HRANALYTUCSDASHBOARD/HRAnalyticsDashboard?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="button">View the project</a></li>
-                    </ul>
-                  </article>
+
+
 
               </section>
 
