--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
 								</article>
 
                 </article>
+                <article>
+                  <span class="date">March 27, 2023</span>
+									<header>
+										<h2><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/">YouTube Stats of Turkish News Media</a></h2>
+									</header>
+									<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image fit"><img src="images/YouTubeStats.png" alt="" /></a>
+									<p>This project aims to analyze the popularity and engagement of 15 YouTube channels belonging to Turkish news media by scraping their statistics.</p>
+									<ul class="actions special">
+										<li><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="button">View</a></li>
+									</ul>
+								</article>
 
 
 
