--- a/index.html
+++ b/index.html
@@ -48,19 +48,31 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header class="major">
+                <span class="date">March 27, 2023</span>
+                <header class="major">
 
-									<h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
-									<p>After completing 10-week data science course, now it is time to choose the final projects.
-                    For our final project, we have decided to build a web assistant in the form of a chatbot.
-                    This chatbot will be designed to answer school-related questions in a relevant and accurate manner.
-                  </p>
+									<h2><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/">YouTube Stats of Turkish News Media</a></h2>
+									<p>This project aims to analyze the popularity and engagement of 15 YouTube channels belonging to Turkish news media by scraping their statistics.</p>
 								</header>
-								<a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image main"><img src="images/Diega.png" alt="" /></a>
+								<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image main"><img src="images/Diega.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button large">View</a></li>
+									<li><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="button large">View</a></li>
 								</ul>
 							</article>
+
+              <article>
+                <span class="date">December 16, 2022</span>
+                <header>
+                  <h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
+                </header>
+                <a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image fit"><img src="images/YouTubeStats.png" alt="" /></a>
+                <p>After completing 10-week data science course, now it is time to choose the final projects.
+                  For our final project, we have decided to build a web assistant in the form of a chatbot.
+                  This chatbot will be designed to answer school-related questions in a relevant and accurate manner.</p>
+                <ul class="actions special">
+                  <li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button">View</a></li>
+                </ul>
+              </article>
 
 						<!-- Posts -->
 							<section class="posts">
@@ -91,18 +103,8 @@
 									</ul>
 								</article>
 
-                
-                <article>
-                  <span class="date">March 27, 2023</span>
-									<header>
-										<h2><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/">YouTube Stats of Turkish News Media</a></h2>
-									</header>
-									<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image fit"><img src="images/YouTubeStats.png" alt="" /></a>
-									<p>This project aims to analyze the popularity and engagement of 15 YouTube channels belonging to Turkish news media by scraping their statistics.</p>
-									<ul class="actions special">
-										<li><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="button">View</a></li>
-									</ul>
-								</article>
+
+
 
 
 
