--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<h2><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/">YouTube Stats of Turkish News Media</a></h2>
 									<p>This project aims to analyze the popularity and engagement of 15 YouTube channels belonging to Turkish news media by scraping their statistics.</p>
 								</header>
-								<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image main"><img src="images/Diega.png" alt="" /></a>
+								<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image main"><img src="images/YouTubeStats.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="button large">View</a></li>
 								</ul>
@@ -65,7 +65,7 @@
                 <header>
                   <h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
                 </header>
-                <a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image fit"><img src="images/YouTubeStats.png" alt="" /></a>
+                <a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image fit"><img src="images/Diega.png" alt="" /></a>
                 <p>After completing 10-week data science course, now it is time to choose the final projects.
                   For our final project, we have decided to build a web assistant in the form of a chatbot.
                   This chatbot will be designed to answer school-related questions in a relevant and accurate manner.</p>
