--- a/index.html
+++ b/index.html
@@ -48,18 +48,109 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-                <span class="date">March 27, 2023</span>
-                <header class="major">
+        <span class="date">March 27, 2023</span>
+        <header class="major">
+
 									<h2><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/">YouTube Stats of Turkish News Media</a></h2>
 									<p>This project aims to analyze the popularity and engagement of 15 YouTube channels belonging to Turkish news media by scraping their statistics.</p>
 								</header>
-								<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image main"><img src="images/Diega.png" alt="" /></a>
+								<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image main"><img src="images/YouTubeStats.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="button large">View</a></li>
 								</ul>
 							</article>
 
-							<article>
-                <span class="date">March 12, 2023</span>
+              <article>
+        <span class="date">December 16, 2022</span>
+                <header>
+                  <h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
+                </header>
+                <a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image fit"><img src="images/Diega.png" alt="" /></a>
+                <p>After completing 10-week data science course, now it is time to choose the final projects.
+                  For our final project, we have decided to build a web assistant in the form of a chatbot.
+                  This chatbot will be designed to answer school-related questions in a relevant and accurate manner.</p>
+                <ul class="actions special">
+                  <li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button">View</a></li>
+                </ul>
+              </article>
+
+						<!-- Posts -->
+							<section class="posts">
+								<article>
+                  <span class="date">March 12, 2023</span>
 									<header>
-										<h2><a href="https://
+										<h2><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings">SiteHercules, Construction daily report app</a></h2>
+									</header>
+									<a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="image fit"><img src="images/SITEHERCULES-Welcome page.png" alt="" /></a>
+									<p>Our project simplifies daily tracking in construction and prioritizes user-friendliness for operators.
+                    It streamlines data input and access, enabling more accurate analysis of construction progress.</p>
+									<ul class="actions special">
+										<li><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="button">View</a></li>
+									</ul>
+								</article>
+
+                <article>
+                  <span class="date">February 20, 2023</span>
+									<header>
+										<h2><a href="https://public.tableau.com/app/profile/selcan.gulec">My TABLEAU Projects</a></h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/selcan.gulec" class="image fit"><img src="images/AIRBNB TABLEAU PROJECT.png" alt="" /></a>
+									<p>Building these Tableau projects was an enjoyable experience for me.</p>
+									<ul class="actions special">
+
+                    <li><a href="https://public.tableau.com/app/profile/selcan.gulec" class="button">View</a></li>
+                    <hr>
+									</ul>
+								</article>
+
+
+
+
+
+
+              </section>
+
+
+
+
+
+
+
+						<section class="split contact">
+							<section class="alt">
+								<h3>Location</h3>
+								<p>Mexico City, MX</p>
+							</section>
+
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">selcangulec@proton.me</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.linkedin.com/in/sgulec/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/gulecsec" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
+						</section>
+					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
