--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/selcan.gulec">My TABLEAU Projects</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/selcan.gulec" class="image fit"><img src="images/AIRBNB TABLEAU PROJECT.png" alt="" /></a>
-									<p>Building these Tableau projects was an enjoyable experience for me.</p>
+									<p>The portfolio project I completed includes two Tableau projects. The first project involved analyzing customer data for a fictional company and creating a dashboard to visualize key metrics. The second project involved analyzing Airbnb data for a specific city and creating a dashboard to visualize key information such as prices, availability, and ratings. Both projects required skills in data cleaning, analysis, and visualization using Tableau. The insights gained from these projects helped inform business decisions and improve operations.</p>
 									<ul class="actions special">
 
                     <li><a href="https://public.tableau.com/app/profile/selcan.gulec" class="button">View</a></li>
