--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+      <!-- Add the loading animation code here -->
+      <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
@@ -152,6 +158,12 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+      <!-- JavaScript files for the loading animation -->
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script src="assets/js/loader.js"></script>
+
+      <!-- Main JavaScript file -->
+      <script src="assets/js/main.js"></script>
 
 	</body>
 </html>
