--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>SELCAN GULEC's PORTFOLIO</title>
@@ -11,6 +6,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+			body {
+				background-color: #ebebeb;
+				background-image: linear-gradient(-45deg, #ebebeb 25%, #b7b7b7 25%, #b7b7b7 50%, #ebebeb 50%, #ebebeb 75%, #b7b7b7 75%, #b7b7b7);
+				background-size: 50px 50px;
+				animation: bg-animation 10s ease infinite;
+			}
+
+			@keyframes bg-animation {
+				0% {
+					background-position: 0 0;
+				}
+				100% {
+					background-position: 100% 100%;
+				}
+			}
+		</style>
 	</head>
 	<body class="is-preload">
       <!-- Add the loading animation code here -->
