--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>SELCAN GULEC's PORTFOLIO</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>SELCAN GULEC's PORTFOLIO</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <style>
-			body {
-				background-color: #ebebeb;
-				background-image: linear-gradient(-45deg, #ebebeb 25%, #b7b7b7 25%, #b7b7b7 50%, #ebebeb 50%, #ebebeb 75%, #b7b7b7 75%, #b7b7b7);
-				background-size: 50px 50px;
-				animation: bg-animation 10s ease infinite;
-			}
+      body {
+        background-image: linear-gradient(
+          -45deg,
+          #ebebeb 25%,
+          #b7b7b7 25%,
+          #b7b7b7 50%,
+          #ebebeb 50%,
+          #ebebeb 75%,
+          #b7b7b7 75%,
+          #b7b7b7
+        );
+        background-size: 50px 50px;
+        animation: bg-animation 10s ease infinite;
+      }
 
-			@keyframes bg-animation {
-				0% {
-					background-position: 0 0;
-				}
-				100% {
-					background-position: 100% 100%;
-				}
-			}
-		</style>
-	</head>
-	<body class="is-preload">
-      <!-- Add the loading animation code here -->
-      <div id="loader-wrapper">
-        <div id="loader"></div>
-        <div class="loader-section section-left"></div>
-        <div class="loader-section section-right"></div>
-    </div>
+        @keyframes bg-animation {
+      0% {
+        background-position: 0 0;
+      }
+      100% {
+        background-position: 100% 100%;
+      }
+    }
+  </style>
+
+</head>
+<body>
+  <!-- Add the loading animation code here -->
+  <div id="loader-wrapper">
+    <div id="loader"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+  </div>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
