--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="#projects-header">Projects</a></li>
+							<li class="active"><a href="#projects">Projects</a></li>
 
 						</ul>
 						<ul class="icons">
@@ -162,7 +162,18 @@
 									</ul>
 								</article>
 
+
+
+
+
+
               </section>
+
+
+
+
+
+
 
 						<section class="split contact">
 							<section class="alt">
@@ -205,7 +216,6 @@
 
       <!-- Main JavaScript file -->
       <script src="assets/js/main.js"></script>
-
 
 	</body>
 </html>
