--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="#projects">Projects</a></li>
+							<li class="active"><a href="#projects-header">Projects</a></li>
 
 						</ul>
 						<ul class="icons">
