--- a/index.html
+++ b/index.html
@@ -32,6 +32,36 @@
     }
   </style>
 
+<script>
+  // Define the text to be typed
+  const text = "SELCAN GULEC's PORTFOLIO";
+
+  // Get the headline element
+  const headline = document.getElementById("headline");
+
+  // Set the initial text content to an empty string
+  headline.textContent = "";
+
+  // Define a function to add a single character to the headline
+  function addChar() {
+    // Get the current text content of the headline
+    const currentText = headline.textContent;
+
+    // Get the next character in the text to be typed
+    const nextChar = text.charAt(currentText.length);
+
+    // Add the next character to the headline
+    headline.textContent = currentText + nextChar;
+  }
+
+  // Define the duration of the typing effect (in milliseconds)
+  const duration = 50;
+
+  // Start the typing effect by adding a new character to the headline every 'duration' milliseconds
+  setInterval(addChar, duration);
+</script>
+
+
 </head>
 <body>
   <!-- Add the loading animation code here -->
@@ -52,35 +82,6 @@
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
-
-          <script>
-            // Define the text to be typed
-            const text = "SELCAN GULEC's PORTFOLIO";
-
-            // Get the headline element
-            const headline = document.getElementById("headline");
-
-            // Set the initial text content to an empty string
-            headline.textContent = "";
-
-            // Define a function to add a single character to the headline
-            function addChar() {
-                // Get the current text content of the headline
-                const currentText = headline.textContent;
-
-                // Get the next character in the text to be typed
-                const nextChar = text.charAt(currentText.length);
-
-                // Add the next character to the headline
-                headline.textContent = currentText + nextChar;
-            }
-
-            // Define the duration of the typing effect (in milliseconds)
-            const duration = 50;
-
-            // Start the typing effect by adding a new character to the headline every 'duration' milliseconds
-            setInterval(addChar, duration);
-        </script>
 
     </div>
 
@@ -210,6 +211,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+      <script src="assets/js/jquery.dropotron.min.js"></script>
       <!-- JavaScript files for the loading animation -->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
       <script src="assets/js/loader.js"></script>
