--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="#main">Projects</a></li>
+							<li class="active"><a href="#projects-header">Projects</a></li>
 
 						</ul>
 						<ul class="icons">
@@ -163,17 +163,7 @@
 									</ul>
 								</article>
 
-
-
-
-
-
               </section>
-
-
-
-
-
 
 
 						<section class="split contact">
