--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="#main-header">Projects</a></li>
+							<li class="active"><a href="#main-post featured">Projects</a></li>
 
 						</ul>
 						<ul class="icons">
