--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							class="active"><a href="#main">Projects</a></li>
+							<a href="#main">Projects</a>
 
 						</ul>
 						<ul class="icons">
