--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         );
         background-size: 50px 50px;
         animation: bg-animation 10s ease infinite;
+        scroll-behavior: smooth;
       }
 
         @keyframes bg-animation {
