--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul class="links">
-              <li class="active"><a href="#main">Projects</a></li>
+						<ul class="active">
+              <li><a href="#main">Projects</a></li>
 
 						</ul>
 						<ul class="icons">
