--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 </ul>
               </article>
 
-
+						<!-- Posts -->
+							<section class="posts">
 								<article>
                   <span class="date">March 12, 2023</span>
 									<header>
@@ -163,6 +164,7 @@
 									</ul>
 								</article>
 
+              </section>
 
 
 						<section class="split contact">
